--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,9 @@ services:
             - 8000:80
         volumes:
             - ./php/:/var/www/html/
+        networks:
+            - EdenAttack
+
             
     db:
         container_name: database
