--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,7 +5,7 @@ RUN echo "ServerName 127.0.0.1" >> /etc/apache2/apache2.conf
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/install-php-extensions && \
-    install-php-extensions intl
+    install-php-extensions intl pdo_mysql
 
 # RUN curl -sSk https://getcomposer.org/installer | php -- --disable-tls && \
 #     mv composer.phar /usr/local/bin/composer
@@ -17,5 +17,3 @@ COPY ./config/apache.conf /etc/apache2/sites-available/000-default.conf
 COPY ./config/php-config.ini /usr/local/etc/php/conf.d/php-config-overrides.ini
 
 WORKDIR /var/www/
-
-RUN docker-php-ext-install pdo pdo_mysql
